--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,37 @@
 .App {
   text-align: center;
 }
+
+body {
+	font-family: sans-serif;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	min-height: 100vh;
+}
+
+.temperature-display {
+  display: flex;
+	border-radius: 50%;
+	height: 220px;
+	width: 220px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+  font-size: 48px;
+  color: rgb(51, 50, 50);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 5px 10px 75px #2b2baa;
+}
+
+.button-container > button {
+  padding: 20px;
+  border: none;
+  background: none;
+  font-size: 32px;
+  margin: 20px;
+  color: rgb(255, 255, 255)
+}
