--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,8 +16,8 @@ body {
 .temperature-display {
   display: flex;
 	border-radius: 50%;
-	height: 220px;
-	width: 220px;
+	height: 200px;
+	width: 200px;
 	text-align: center;
 	justify-content: center;
 	align-items: center;
@@ -27,6 +27,11 @@ body {
   box-shadow: 5px 10px 75px #2b2baa;
 }
 
+.temperature-display-container {
+  display: flex;
+	justify-content: center;
+}
+
 .button-container > button {
   padding: 20px;
   border: none;
@@ -34,4 +39,8 @@ body {
   font-size: 32px;
   margin: 20px;
   color: rgb(255, 255, 255)
+}
+
+.preset{
+  padding-bottom: 25px;
 }
